envoy/conf/envoy.yml
static_resources:
  listeners:
  - name: listener_grpc_web
    address:
      socket_address: { address: 0.0.0.0, port_value: 9081 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          stream_idle_timeout: 0s
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/c13n-grpc/"
                route:
                  prefix_rewrite: "/"
                  cluster: c13n_backend_grpc_web
                  max_grpc_timeout: 0s
              - match:
                  prefix: "/c13n/"
                route:
                  prefix_rewrite: "/"
                  cluster: c13n_web_cluster
              - match:
                  prefix: "/c13n"
                redirect:
                  path_redirect: "/c13n/"
              
              cors:
                allow_origin_string_match:
                  - safe_regex:
                      google_re2: {}
                      regex: .*
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: authorization,keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,authorization,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                max_age: "1728000"
                expose_headers: authorization,grpc-status,grpc-message
          http_filters:
          - name: envoy.filters.http.cors
          - name: envoy.filters.http.grpc_web
          - name: envoy.filters.http.router

      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext

          common_tls_context:
            alpn_protocols: "h2"
            tls_certificates:
              - certificate_chain:
                  filename: /etc/envoy/envoy.crt
                private_key:
                  filename: /etc/envoy/envoy.key
            tls_params:
              tls_maximum_protocol_version: TLSv1_3
              tls_minimum_protocol_version: TLSv1_3

  clusters:
  - name: c13n_backend_grpc_web
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_0
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: c13n
                    port_value: 9999
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          validation_context:
            trusted_ca:
              filename: /etc/c13n/c13n.pem
  - name: c13n_web_cluster
    connect_timeout: 10s
    type: logical_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_0
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: arc
                    port_value: 80
